--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EarthquakeApp"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDXhjIA4LbJWq6I1dgjNyDsNP9NDhP4uaI">
+
+        </meta-data>
         <activity
             android:name=".MainActivity"
             android:exported="true">
