Added google location dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     //google services
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
